done password confirmation function
