# backend/src/dtos/users.dto.ts
@@ -1,10 +1,12 @@
 import {IsEmail, MinLength, IsString, IsNotEmpty} from 'class-validator';
+import MatchSame from './decorators/matchSame.decorator';
+import MatchNotSame from './decorators/matchNotSame.decorator';
 import HasLowerChar from './decorators/hasLowerChar.decorator';
 import HasUpperChar from './decorators/hasUpperChar.decorator';
 import HasSpecialChar from './decorators/hasSpecialChar.decorator';
 import HasDigitChar from './decorators/hasDigitChar.decorator';
 
-export class CreateUserDto {
+export class ReadUserDto {
   @IsEmail({}, {message: 'This email is invalid'})
   public email: string;
 
@@ -15,6 +17,14 @@ export class CreateUserDto {
   @HasLowerChar()
   public password: string;
 }
+
+export class CreateUserDto extends ReadUserDto{
+  @MatchSame('password', {
+    message: 'password confirmation should be the same as the password',
+  })
+  public passwordConfirm: string;
+}
+
 export class UpdateUserDto {
   @IsString()
   @IsNotEmpty()
@@ -39,5 +49,13 @@ export class PasswordResetDto {
   @HasSpecialChar()
   @HasDigitChar()
   @HasLowerChar()
+  @MatchNotSame('oldPassword', {
+    message: 'new password should not be the same as the old password',
+  })
   public newPassword: string;
+
+  @MatchSame('newPassword', {
+    message: 'password confirmation should be the same as the password',
+  })
+  public newPasswordConfirm: string;
 }
